src/Thumbnail/Thumbnail.st.css
:import {
  -st-from: "wix-ui-core/dist/src/hocs/Focusable/Focusable.st.css";
  -st-default: Focusable;
}

:import {
  -st-from: "../Foundation/stylable/colors.st.css";
  -st-named: B10, B20, B30, D50, D80, D10-30, F00;
}

:vars {
  borderRadius: 6px;
}


.root {
  -st-states: disabled;
}

.root:not(:disabled) {
  cursor: pointer;
}


.thumbnail {
  -st-extends: Focusable;
  -st-states: selected, disabled, size(enum(tiny, small, medium)), hasBackground, hasChildren;
  position: relative;
  display: flex;
  margin: 0 auto;
  padding: 18px;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  background: transparent;
  border: 0;
  border-radius: value(borderRadius);
  box-shadow: 0 0 0 1px value(B30) inset;
  box-sizing: border-box;
  outline: none;
}

.thumbnail:hover {
  box-shadow: 0 0 0 1px value(B20) inset;
}

.thumbnail:focus-visible::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-shadow: 0 0 0 3px value(F00);
  border-radius: value(borderRadius);
  content: ' ';
}

.thumbnail:size(tiny) {
  padding: 15px;
}

.thumbnail:selected {
  box-shadow: 0 0 0 2px value(B10) inset;
}

.thumbnail:selected:disabled {
  box-shadow: 0 0 0 2px value(D10-30) inset;
}

.thumbnail:disabled {
  box-shadow: 0 0 0 1px value(D10-30) inset;
  cursor: default;
}

.thumbnail:disabled .image {
  opacity: .42;
}

.thumbnail:disabled .selectedIcon {
  color: value(D80);
  background: value(D50);
}

.thumbnail:disabled .title,
.thumbnail:disabled .description {
  color: value(D10-30);
}


.thumbnail:hasChildren {
  padding: 0;
  align-items: stretch;
}


.thumbnail:hasBackground,
.thumbnail:hasChildren {
  height: 100%;
  padding: 0;
  background-color: white;
  box-shadow: 0 0 0 1px value(B30);
}

.thumbnail:hasBackground:hover,
.thumbnail:hasChildren:hover {
  box-shadow: 0 0 0 1px value(B20);
}

.thumbnail:hasBackground:selected,
.thumbnail:hasChildren:selected {
  box-shadow: 0 0 0 2px value(B10);
}

.thumbnail:hasBackground:selected:disabled,
.thumbnail:hasChildren:selected:disabled {
  box-shadow: 0 0 0 2px value(D10-30);
}

.thumbnail:hasBackground:disabled,
.thumbnail:hasChildren:disabled {
  box-shadow: 0 0 0 1px value(D10-30);
}

.customChild {
  -st-states: disabled;
  overflow: auto; /* is required to make thumbnail border be always on top of custom child */
  border-radius: value(borderRadius);
}

.customChild:disabled {
  opacity: 0.3;
}


.title,
.description,
.image {
  word-break: break-word;
  text-align: center;
}

.title:last-child,
.description:last-child,
.image:last-child {
  padding: 0;
}


.title {
  padding-bottom: 6px;
}

.bottomTitle {
  -st-states: selected, disabled;
  display: block;
  text-align: center;
  padding-top: 6px;
}

.bottomTitle:selected {
  color: value(B10);
}

.bottomTitle:disabled {
  color: value(D10-30);
}

.image {
  padding-bottom: 12px;
}

.backgroundImage {
  -st-states: disabled;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  border-radius: value(borderRadius);
}

.backgroundImage:disabled {
  opacity: 0.3;
}

.selectedIcon {
  position: absolute;
  top: -10px;
  right: -10px;
  background: value(B10);
  width: 24px;
  height: 24px;
  border-radius: 50%;
  color: white;
  z-index: 1;
}

:global([dir="rtl"]) .selectedIcon {
  left: -10px;
  right: auto;
}

